--- a/wp-content/themes/travel-agency/style.css
+++ b/wp-content/themes/travel-agency/style.css
@@ -9227,7 +9227,7 @@ p{
     margin-bottom: 10px;
 }
 .category-trip-detail-wrap .amenities ul{
-    margin-left: 20px;
+    /*margin-left: 20px;*/
 }
 #social_side_links li{
     padding: 10px 10px 10px 10px;
